--- a/myweb/blog/templates/blog/index.html
+++ b/myweb/blog/templates/blog/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>home</title>
 </head>
 <body>
-
-    <h1>Ini adlah halaman Index</h1>
     
 </body>
 </html>
