--- a/myweb/templates/snipet/base.html
+++ b/myweb/templates/snipet/base.html
@@ -8,22 +8,73 @@
 
     <!-- Bootstrap CSS -->
     <link href=" {% static 'vendor/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
-
-    <title>Hello, world!</title>
+    <link href=" {% static 'vendor/bootstrap/css/customecss.css'%}" rel="stylesheet">
+   
+    <title>{{title}}</title>
   </head>
   <body>
+    <!-- section to navbar -->
+  <!-- section navbar -->
 
-    {% block content %}
-    {% endblock %}
+<!-- <nav class="navbar navbar-light" style="background-color: #e3f2fd;"></nav> -->
+<nav class="navbar navbar-expand-lg navbar-light ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><strong>Adam Ghosam</strong></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Artikel</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Tutorial</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<!-- end navbar -->
+    <!-- section to content -->
+    <!-- <div class="container"> -->
+      {% block content %}
+      {% endblock %}
+
+
+
+
+<section class="footer">
+  <div class="card content2">
+    <figure class="text-center mt-2">
+      <blockquote class="blockquote">
+        <p>Copright &copy Adam Ghosam</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        Seseorang yang bernama  <cite title="Source Title">Adam Ghosam</cite>
+      </figcaption>
+    </figure>
+  </div>
+
+</section>
+
+    <!-- </div> -->
 
     <!-- Optional JavaScript; choose one of the two! -->
+    
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%} " ></script>
     
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script src="{% static 'vendor/popper/popper.min.js'%} " ></script>
     <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js'%} " ></script>
+    <script src="{% static 'vendor/popper/popper.js' %} " ></script>
     <!-- Option 3: Separate Jquery-->
     <script src="{% static 'vendor/jquery/jquery.min.js'%} " ></script>
     
