--- a/myweb/templates/snipet/base.html
+++ b/myweb/templates/snipet/base.html
@@ -19,20 +19,20 @@
 <!-- <nav class="navbar navbar-light" style="background-color: #e3f2fd;"></nav> -->
 <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><strong>Adam Ghosam</strong></a>
+      <a class="navbar-brand" href="/"><strong>Adam Ghosam</strong></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Artikel</a>
+                    <a class="nav-link active" aria-current="page" href="/artikel">Artikel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tutorial</a>
+                    <a class="nav-link" href="/tutorial">Tutorial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
                 
             </ul>
